--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>
-		Zyyo </title>
+		Shou </title>
 	<link rel="icon" href="./static/img/favicon.ico">
 	<meta name="description" content="整天半吊子和不学无术的坏孩子,梦想成为庄稼地里的读书人.....">
 	<meta name="keywords" content="zyyo,张扬YO,ZYYO,张扬主页,ZYYO引导页,zhangyang">
@@ -37,21 +37,21 @@
 			<div class="left-div left-tag">
 				<div class="left-tag-item">网瘾
 				</div>
-				<div class="left-tag-item">小学生
+				<div class="left-tag-item">学生
 				</div>
-				<div class="left-tag-item">大一
+				<div class="left-tag-item">吉他
 				</div>
 				<div class="left-tag-item">网页
 				</div>
 				<div class="left-tag-item">linux
 				</div>
-				<div class="left-tag-item">跑者
+				<div class="left-tag-item">羽球
 				</div>
 				<div class="left-tag-item">前端
 				</div>
-				<div class="left-tag-item">骑行</div>
+				<div class="left-tag-item">科技</div>
 			</div>
-			<div class="left-div left-time">
+			<div class="left-div left-time">  
 				<ul id="line">
 					<li>
 						<div class="focus"></div>
@@ -116,7 +116,7 @@
 						<svg t="1704870588438" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3174" >
                             <path d="M926.47619 355.644952V780.190476a73.142857 73.142857 0 0 1-73.142857 73.142857H170.666667a73.142857 73.142857 0 0 1-73.142857-73.142857V355.644952l304.103619 257.828572a170.666667 170.666667 0 0 0 220.745142 0L926.47619 355.644952zM853.333333 170.666667a74.044952 74.044952 0 0 1 26.087619 4.778666 72.704 72.704 0 0 1 30.622477 22.186667 73.508571 73.508571 0 0 1 10.678857 17.67619c3.169524 7.509333 5.12 15.652571 5.607619 24.210286L926.47619 243.809524v24.380952L559.469714 581.241905a73.142857 73.142857 0 0 1-91.306666 2.901333l-3.632762-2.925714L97.52381 268.190476v-24.380952a72.899048 72.899048 0 0 1 40.155428-65.292191A72.97219 72.97219 0 0 1 170.666667 170.666667h682.666666z"  p-id="3175"></path>
                         </svg>
-						<div class="iconTip">Mail</div>
+						<div class="iconTip">Mail</div>  
 					</a><a class="iconItem" onclick="pop('./static/img/wxzsm.jpg')" href="javascript:void(0)">
 						<svg t="1705247464964" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4987" >
                             <path d="M995.575172 725.451034c-12.358621-26.835862-38.488276-64.794483-92.689655-94.27862-62.146207-33.721379-136.297931-40.96-208.860689-20.303448l-99.928276 28.424827-279.304828-126.057931H22.775172v489.401379h509.704828l432.375172-195.266207c15.006897-6.708966 26.835862-19.42069 32.662069-34.957241 5.649655-15.36 4.943448-31.955862-1.942069-46.962759z m-482.162758 188.910345H111.051034V601.688276h184.673104l166.664828 75.387586-3.354483 0.882759h-170.372414v88.275862H471.393103l246.819311-70.267586c49.434483-14.124138 101.517241-9.357241 142.653793 12.888275 18.184828 9.886897 30.72 20.833103 39.371034 30.896552l-386.824827 174.609655z"  p-id="4988"></path>
@@ -153,10 +153,10 @@
 				<div class="title"><svg t="1705257422086" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1891" >
                         <path d="M629.333333 202.666667v213.333333h277.333334v448h-512v-213.333333h-277.333334v-448h512z m213.333334 277.333333h-213.333334v170.666667h-170.666666v149.333333h384v-320z m-277.333334-213.333333h-384v320h213.333334v-170.666667h170.666666v-149.333333z m0 213.333333h-106.666666v106.666667h106.666666v-106.666667z"  p-id="1892"></path>
                     </svg>site </div>
-				<div class="projectList"><a class="projectItem a" target="_blank" href="https://blog.zyyo.net">
+				<div class="projectList"><a class="projectItem a" target="_blank" href="https://gravatar.com/Yantacs">
 						<div class="projectItemLeft">
-							<h1>博客</h1>
-							<p>记录摆烂日常</p>
+							<h1>个人主页</h1>
+							<p>图片</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i1.png" alt="">
@@ -168,7 +168,7 @@
 							<p>存储收集文件</p>
 						</div>
 						<div class="projectItemRight">
-							<img src="./static/img/i2.png" alt="">
+							<img src="./static/img/i2.png" alt="">  
 						</div>
 
 					</a>
@@ -181,10 +181,10 @@
 							<img src="./static/img/i4.png" alt="">
 						</div>
 
-					</a><a class="projectItem a" target="_blank" href="https://zyyo.cc">
+					</a><a class="projectItem a" target="_blank" href="https://tiktok.com/@yanta.du">
 						<div class="projectItemLeft">
-							<h1>实验室</h1>
-							<p>收集有趣html作品</p>
+							<h1>tiktok</h1>
+							<p>作品</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i4.png" alt="">
@@ -194,10 +194,10 @@
 				<div class="title"><svg t="1705257422086" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1891" >
                         <path d="M629.333333 202.666667v213.333333h277.333334v448h-512v-213.333333h-277.333334v-448h512z m213.333334 277.333333h-213.333334v170.666667h-170.666666v149.333333h384v-320z m-277.333334-213.333333h-384v320h213.333334v-170.666667h170.666666v-149.333333z m0 213.333333h-106.666666v106.666667h106.666666v-106.666667z"  p-id="1892"></path>
                     </svg>project </div>
-				<div class="projectList"><a class="projectItem b" target="_blank" href="https://blog.zyyo.net">
+				<div class="projectList"><a class="projectItem b" target="_blank" href="https://yanta4.WordPress.com">
 						<div class="projectItemLeft">
-							<h1>博客</h1>
-							<p>记录摆烂日常</p>
+							<h1>网站</h1>
+							<p>未完待续</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i1.png" alt="">
@@ -224,7 +224,7 @@
 
 					</a><a class="projectItem b" target="_blank" href="https://zyyo.cc">
 						<div class="projectItemLeft">
-							<h1>实验室</h1>
+							<h1>备用实验室</h1>
 							<p>收集有趣html作品</p>
 						</div>
 						<div class="projectItemRight">
@@ -250,7 +250,7 @@
 	<footer>
 		Zyyo © 2024 |
 		<a href="https://beian.miit.gov.cn/">
-			豫ICP备2023015852号-1 </a>
+			苏ICP备20240706号-1(假的) </a>
 	</footer>
 	<div class="tc">
 		<div onclick="" class="tc-main">
