--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 				<div class="left-tag-item">linux
 				</div>
-				<div class="left-tag-item">羽球
+				<div class="left-tag-item">羽球  
 				</div>
 				<div class="left-tag-item">前端
 				</div>
@@ -95,7 +95,7 @@
 			<header>
 				<div class="index-logo" style="background-image: url(./static/img/logo.png);">
 					<img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
-						src="./static/img/logokuang.png">
+						src="./static/img/logokuang.png">  
 				</div>
 				<div class="welcome">
 					Hello I' m <span class="gradientText">
@@ -125,7 +125,7 @@
                         </svg>
 						<div class="iconTip">赞助</div>
 					</a><a class="iconItem" onclick="pop('./static/img/qq.jpg')" href="javascript:void(0)">
-						<svg t="1712319361023" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1861" ><path d="M824.8 613.2c-16-51.4-34.4-94.6-62.7-165.3C766.5 262.2 689.3 112 511.5 112 331.7 112 256.2 265.2 261 447.9c-28.4 70.8-46.7 113.7-62.7 165.3-34 109.5-23 154.8-14.6 155.8 18 2.2 70.1-82.4 70.1-82.4 0 49 25.2 112.9 79.8 159-26.4 8.1-85.7 29.9-71.6 53.8 11.4 19.3 196.2 12.3 249.5 6.3 53.3 6 238.1 13 249.5-6.3 14.1-23.8-45.3-45.7-71.6-53.8 54.6-46.2 79.8-110.1 79.8-159 0 0 52.1 84.6 70.1 82.4 8.5-1.1 19.5-46.4-14.5-155.8z" p-id="1862"></path></svg>
+						<svg t="1712319361023" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1861" ><path d="M824.8 613.2c-16-51.4-34.4-94.6-62.7-165.3C766.5 262.2 689.3 112 511.5 112 331.7 112 256.2 265.2 261 447.9c-28.4 70.8-46.7 113.7-62.7 165.3-34 109.5-23 154.8-14.6 155.8 18 2.2 70.1-82.4 70.1-82.4 0 49 25.2 112.9 79.8 159-26.4 8.1-85.7 29.9-71.6 53.8 11.4 19.3 196.2 12.3 249.5 6.3 53.3 6 238.1 13 249.5-6.3 14.1-23.8-45.3-45.7-71.6-53.8 54.6-46.2 79.8-110.1 79.8-159 0 0 52.1 84.6 70.1 82.4 8.5-1.1 19.5-46.4-14.5-155.8z" p-id="1862"></path></svg>  
 						<div class="iconTip">QQ</div>
 					</a>  <a class="switch" href="javascript:void(0)">
 						<div class="onoffswitch">
@@ -198,7 +198,7 @@
 						<div class="projectItemLeft">
 							<h1>网站</h1>
 							<p>未完待续</p>
-						</div>
+						</div>  
 						<div class="projectItemRight">
 							<img src="./static/img/i1.png" alt="">
 						</div>
@@ -222,10 +222,10 @@
 							<img src="./static/img/i4.png" alt="">
 						</div>
 
-					</a><a class="projectItem b" target="_blank" href="https://zyyo.cc">
+					</a><a class="projectItem b" target="_blank" href="https://chatgpt.com">
 						<div class="projectItemLeft">
-							<h1>备用实验室</h1>
-							<p>收集有趣html作品</p>
+							<h1>Chat GPT</h1>
+							<p>Open AI</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i4.png" alt="">
