--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<div class="zyyo-main">
 		<div class="zyyo-left">
-			<div class="logo" style="background-image: url(./static/img/logo.png);">
+			<div class="logo" style="background-image: url(./static/img/logo.png);">  
 				<img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
 					src="./static/img/logokuang.png">  
 			</div>
@@ -99,7 +99,7 @@
 				</div>
 				<div class="welcome">
 					926 I' m <span class="gradientText">
-						Shou </span>
+						Shoura </span>
 				</div>
 				<div class="description">👦 <span class="purpleText">Full Stack</span> Developer
 				</div>
@@ -107,14 +107,14 @@
 					to <span class="purpleText textBackground">love</span> what you do. </div>
 
 				<div class="iconContainer">
-					<a class="iconItem" onclick="" href="https://github.com/Yanta-706">
+					<a class="iconItem" onclick="" href="https://github.com/Yanta-706">  
 						<svg t="1704870335945" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2487">
                             <path d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9 23.5 23.2 38.1 55.4 38.1 91v112.5c0.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"  p-id="2488"></path>
                         </svg>
 						<div class="iconTip">Github</div>
 					</a><a class="iconItem" onclick="" href="mailto:2424113648@qq.com">
 						<svg t="1704870588438" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3174" >
-                            <path d="M926.47619 355.644952V780.190476a73.142857 73.142857 0 0 1-73.142857 73.142857H170.666667a73.142857 73.142857 0 0 1-73.142857-73.142857V355.644952l304.103619 257.828572a170.666667 170.666667 0 0 0 220.745142 0L926.47619 355.644952zM853.333333 170.666667a74.044952 74.044952 0 0 1 26.087619 4.778666 72.704 72.704 0 0 1 30.622477 22.186667 73.508571 73.508571 0 0 1 10.678857 17.67619c3.169524 7.509333 5.12 15.652571 5.607619 24.210286L926.47619 243.809524v24.380952L559.469714 581.241905a73.142857 73.142857 0 0 1-91.306666 2.901333l-3.632762-2.925714L97.52381 268.190476v-24.380952a72.899048 72.899048 0 0 1 40.155428-65.292191A72.97219 72.97219 0 0 1 170.666667 170.666667h682.666666z"  p-id="3175"></path>
+                            <path d="M926.47619 355.644952V780.190476a73.142857 73.142857 0 0 1-73.142857 73.142857H170.666667a73.142857 73.142857 0 0 1-73.142857-73.142857V355.644952l304.103619 257.828572a170.666667 170.666667 0 0 0 220.745142 0L926.47619 355.644952zM853.333333 170.666667a74.044952 74.044952 0 0 1 26.087619 4.778666 72.704 72.704 0 0 1 30.622477 22.186667 73.508571 73.508571 0 0 1 10.678857 17.67619c3.169524 7.509333 5.12 15.652571 5.607619 24.210286L926.47619 243.809524v24.380952L559.469714 581.241905a73.142857 73.142857 0 0 1-91.306666 2.901333l-3.632762-2.925714L97.52381 268.190476v-24.380952a72.899048 72.899048 0 0 1 40.155428-65.292191A72.97219 72.97219 0 0 1 170.666667 170.666667h682.666666z"  p-id="3175"></path>  
                         </svg>
 						<div class="iconTip">Mail</div>  
 					</a><a class="iconItem" onclick="pop('./static/img/wxzsm.jpg')" href="javascript:void(0)">    
@@ -126,7 +126,7 @@
 						<div class="iconTip">赞助</div>
 					</a><a class="iconItem" onclick="pop('./static/img/qq.jpg')" href="javascript:void(0)">  
 						<svg t="1712319361023" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1861" ><path d="M824.8 613.2c-16-51.4-34.4-94.6-62.7-165.3C766.5 262.2 689.3 112 511.5 112 331.7 112 256.2 265.2 261 447.9c-28.4 70.8-46.7 113.7-62.7 165.3-34 109.5-23 154.8-14.6 155.8 18 2.2 70.1-82.4 70.1-82.4 0 49 25.2 112.9 79.8 159-26.4 8.1-85.7 29.9-71.6 53.8 11.4 19.3 196.2 12.3 249.5 6.3 53.3 6 238.1 13 249.5-6.3 14.1-23.8-45.3-45.7-71.6-53.8 54.6-46.2 79.8-110.1 79.8-159 0 0 52.1 84.6 70.1 82.4 8.5-1.1 19.5-46.4-14.5-155.8z" p-id="1862"></path></svg>  
-						<div class="iconTip">QQ</div>  
+						<div class="iconTip">QQ</div>    
 					</a>  <a class="switch" href="javascript:void(0)">
 						<div class="onoffswitch">
 							<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch"
@@ -203,10 +203,10 @@
 							<img src="./static/img/i1.png" alt="">
 						</div>
 
-					</a><a class="projectItem b" target="_blank" href="https://i.zyyo.cc">
+					</a><a class="projectItem b" target="_blank" href="https://4399.com">
 						<div class="projectItemLeft">
-							<h1>云盘</h1>
-							<p>存储收集文件</p>
+							<h1>4399</h1>
+							<p>4399~</p>
 						</div>
 						<div class="projectItemRight">
 							<img src="./static/img/i2.png" alt="">
@@ -248,7 +248,7 @@
 		</div>
 	</div>
 	<footer>
-		Zyyo © 2024 |
+		Shouar © 2024 |
 		<a href="https://beian.miit.gov.cn/">
 			苏ICP备20240706号-1(假的) </a>
 	</footer>
