--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 	<div id="zyyo-loading">
-		<div id="zyyo-loading-center">  
+		<div id="zyyo-loading-center">    
 		</div>
 	</div>
 	<div class="zyyo-filter"></div>
@@ -32,11 +32,11 @@
 			<div class="left-div left-des">
 				<div class="left-des-item"><svg t="1705773709627" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1478"><path d="M512 249.976471c-99.388235 0-180.705882 81.317647-180.705882 180.705882s81.317647 180.705882 180.705882 180.705882 180.705882-81.317647 180.705882-180.705882-81.317647-180.705882-180.705882-180.705882z m0 301.17647c-66.258824 0-120.470588-54.211765-120.470588-120.470588s54.211765-120.470588 120.470588-120.470588 120.470588 54.211765 120.470588 120.470588-54.211765 120.470588-120.470588 120.470588z" p-id="1479"></path><path d="M512 39.152941c-216.847059 0-391.529412 174.682353-391.529412 391.529412 0 349.364706 391.529412 572.235294 391.529412 572.235294s391.529412-222.870588 391.529412-572.235294c0-216.847059-174.682353-391.529412-391.529412-391.529412z m0 891.482353C424.658824 873.411765 180.705882 686.682353 180.705882 430.682353c0-183.717647 147.576471-331.294118 331.294118-331.294118s331.294118 147.576471 331.294118 331.294118c0 256-243.952941 442.729412-331.294118 499.952941z" p-id="1480"></path></svg>China-Henan  
 				</div>
-				<div class="left-des-item"><svg t="1705773906032" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2474"><path d="M729.6 234.666667H294.4V157.866667a51.2 51.2 0 0 1 51.2-51.2h332.8a51.2 51.2 0 0 1 51.2 51.2v76.8z m179.2 51.2a51.2 51.2 0 0 1 51.2 51.2v512a51.2 51.2 0 0 1-51.2 51.2H115.2a51.2 51.2 0 0 1-51.2-51.2v-512a51.2 51.2 0 0 1 51.2-51.2h793.557333z m-768 172.032c0 16.384 13.312 29.696 29.696 29.696h683.008a29.696 29.696 0 1 0 0-59.392H170.410667a29.696 29.696 0 0 0-29.696 29.696z m252.416 118.784c0 16.384 13.312 29.696 29.696 29.696h178.176a29.696 29.696 0 1 0 0-59.392H422.912a29.738667 29.738667 0 0 0-29.696 29.696z" p-id="2475"></path></svg>Sias</div>  
+				<div class="left-des-item"><svg t="1705773906032" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2474"><path d="M729.6 234.666667H294.4V157.866667a51.2 51.2 0 0 1 51.2-51.2h332.8a51.2 51.2 0 0 1 51.2 51.2v76.8z m179.2 51.2a51.2 51.2 0 0 1 51.2 51.2v512a51.2 51.2 0 0 1-51.2 51.2H115.2a51.2 51.2 0 0 1-51.2-51.2v-512a51.2 51.2 0 0 1 51.2-51.2h793.557333z m-768 172.032c0 16.384 13.312 29.696 29.696 29.696h683.008a29.696 29.696 0 1 0 0-59.392H170.410667a29.696 29.696 0 0 0-29.696 29.696z m252.416 118.784c0 16.384 13.312 29.696 29.696 29.696h178.176a29.696 29.696 0 1 0 0-59.392H422.912a29.738667 29.738667 0 0 0-29.696 29.696z" p-id="2475"></path></svg>Sias</div>    
 			</div>
-			<div class="left-div left-tag">    
+			<div class="left-div left-tag">      
 				<div class="left-tag-item">网瘾
-				</div>
+				</div>  
 				<div class="left-tag-item">学生
 				</div>
 				<div class="left-tag-item">吉他
@@ -46,7 +46,7 @@
 				<div class="left-tag-item">linux
 				</div>
 				<div class="left-tag-item">羽球  
-				</div>
+				</div>  
 				<div class="left-tag-item">前端
 				</div>
 				<div class="left-tag-item">科技</div>
@@ -77,7 +77,7 @@
 						</div>
 						<div>2021.2</div>
 					</li>
-					<li>
+					<li>  
 						<div class="focus"></div>
 						<div>...
 						</div>
@@ -94,14 +94,14 @@
 		<div class="zyyo-right">
 			<header>
 				<div class="index-logo" style="background-image: url(./static/img/logo.png);">
-					<img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"
+					<img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"  
 						src="./static/img/logokuang.png">  
 				</div>
 				<div class="welcome">
 					926 I' m <span class="gradientText">
 						Shoura </span>
 				</div>
-				<div class="description">👦 <span class="purpleText">Full Stack</span> Developer
+				<div class="description">wok! <span class="purpleText">Full Stack</span> Developer
 				</div>
 				<div class="description">📝 The only way to do <span class="purpleText textBackground">great</span> is
 					to <span class="purpleText textBackground">love</span> what you do. </div>
@@ -116,7 +116,7 @@
 						<svg t="1704870588438" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3174" >
                             <path d="M926.47619 355.644952V780.190476a73.142857 73.142857 0 0 1-73.142857 73.142857H170.666667a73.142857 73.142857 0 0 1-73.142857-73.142857V355.644952l304.103619 257.828572a170.666667 170.666667 0 0 0 220.745142 0L926.47619 355.644952zM853.333333 170.666667a74.044952 74.044952 0 0 1 26.087619 4.778666 72.704 72.704 0 0 1 30.622477 22.186667 73.508571 73.508571 0 0 1 10.678857 17.67619c3.169524 7.509333 5.12 15.652571 5.607619 24.210286L926.47619 243.809524v24.380952L559.469714 581.241905a73.142857 73.142857 0 0 1-91.306666 2.901333l-3.632762-2.925714L97.52381 268.190476v-24.380952a72.899048 72.899048 0 0 1 40.155428-65.292191A72.97219 72.97219 0 0 1 170.666667 170.666667h682.666666z"  p-id="3175"></path>  
                         </svg>
-						<div class="iconTip">Mail</div>  
+						<div class="iconTip">Mail</div>    
 					</a><a class="iconItem" onclick="pop('./static/img/wxzsm.jpg')" href="javascript:void(0)">    
 						<svg t="1705247464964" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4987" >
                             <path d="M995.575172 725.451034c-12.358621-26.835862-38.488276-64.794483-92.689655-94.27862-62.146207-33.721379-136.297931-40.96-208.860689-20.303448l-99.928276 28.424827-279.304828-126.057931H22.775172v489.401379h509.704828l432.375172-195.266207c15.006897-6.708966 26.835862-19.42069 32.662069-34.957241 5.649655-15.36 4.943448-31.955862-1.942069-46.962759z m-482.162758 188.910345H111.051034V601.688276h184.673104l166.664828 75.387586-3.354483 0.882759h-170.372414v88.275862H471.393103l246.819311-70.267586c49.434483-14.124138 101.517241-9.357241 142.653793 12.888275 18.184828 9.886897 30.72 20.833103 39.371034 30.896552l-386.824827 174.609655z"  p-id="4988"></path>
@@ -134,7 +134,7 @@
 							<label class="onoffswitch-label" for="myonoffswitch">
 								<span class="onoffswitch-inner"></span>
 								<span class="onoffswitch-switch"></span>
-							</label>
+							</label>  
 						</div>
 					</a>
 				</div>
@@ -151,7 +151,7 @@
 
 			<content>
 				<div class="title"><svg t="1705257422086" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="1891" >
-                        <path d="M629.333333 202.666667v213.333333h277.333334v448h-512v-213.333333h-277.333334v-448h512z m213.333334 277.333333h-213.333334v170.666667h-170.666666v149.333333h384v-320z m-277.333334-213.333333h-384v320h213.333334v-170.666667h170.666666v-149.333333z m0 213.333333h-106.666666v106.666667h106.666666v-106.666667z"  p-id="1892"></path>
+                        <path d="M629.333333 202.666667v213.333333h277.333334v448h-512v-213.333333h-277.333334v-448h512z m213.333334 277.333333h-213.333334v170.666667h-170.666666v149.333333h384v-320z m-277.333334-213.333333h-384v320h213.333334v-170.666667h170.666666v-149.333333z m0 213.333333h-106.666666v106.666667h106.666666v-106.666667z"  p-id="1892"></path>  
                     </svg>site </div>
 				<div class="projectList"><a class="projectItem a" target="_blank" href="https://gravatar.com/Yantacs">
 						<div class="projectItemLeft">
@@ -178,7 +178,7 @@
 							<p>收集有趣html作品</p>
 						</div>
 						<div class="projectItemRight">
-							<img src="./static/img/i4.png" alt="">
+							<img src="./static/img/i3.png" alt="">
 						</div>
 
 					</a><a class="projectItem a" target="_blank" href="https://tiktok.com/@yanta.du">
@@ -200,7 +200,7 @@
 							<p>未完待续</p>
 						</div>  
 						<div class="projectItemRight">
-							<img src="./static/img/i1.png" alt="">
+							<img src="./static/img/i5.png" alt="">
 						</div>
 
 					</a><a class="projectItem b" target="_blank" href="https://4399.com">
@@ -209,7 +209,7 @@
 							<p>4399~</p>
 						</div>
 						<div class="projectItemRight">
-							<img src="./static/img/i2.png" alt="">
+							<img src="./static/img/i6.png" alt="">
 						</div>
 
 					</a>
@@ -219,7 +219,7 @@
 							<p>不一定进得去哦</p>
 						</div>
 						<div class="projectItemRight">
-							<img src="./static/img/i4.png" alt="">
+							<img src="./static/img/i7.png" alt="">
 						</div>
 
 					</a><a class="projectItem b" target="_blank" href="https://chatgpt.com">
@@ -228,7 +228,7 @@
 							<p>Open AI</p>
 						</div>
 						<div class="projectItemRight">
-							<img src="./static/img/i4.png" alt="">
+							<img src="./static/img/i8.png" alt="">
 						</div>
 
 					</a></div>
