--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 				<div class="left-des-item"><svg t="1705773906032" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2474"><path d="M729.6 234.666667H294.4V157.866667a51.2 51.2 0 0 1 51.2-51.2h332.8a51.2 51.2 0 0 1 51.2 51.2v76.8z m179.2 51.2a51.2 51.2 0 0 1 51.2 51.2v512a51.2 51.2 0 0 1-51.2 51.2H115.2a51.2 51.2 0 0 1-51.2-51.2v-512a51.2 51.2 0 0 1 51.2-51.2h793.557333z m-768 172.032c0 16.384 13.312 29.696 29.696 29.696h683.008a29.696 29.696 0 1 0 0-59.392H170.410667a29.696 29.696 0 0 0-29.696 29.696z m252.416 118.784c0 16.384 13.312 29.696 29.696 29.696h178.176a29.696 29.696 0 1 0 0-59.392H422.912a29.738667 29.738667 0 0 0-29.696 29.696z" p-id="2475"></path></svg>Sias</div>    
 			</div>
 			<div class="left-div left-tag">      
-				<div class="left-tag-item">网瘾
+				<div class="left-tag-item">旅游
 				</div>  
 				<div class="left-tag-item">学生
 				</div>
 				<div class="left-tag-item">吉他  
 				</div>
-				<div class="left-tag-item">网页
+				<div class="left-tag-item">地理
 				</div>
 				<div class="left-tag-item">linux
 				</div>
@@ -53,11 +53,11 @@
 			</div>
 			<div class="left-div left-time">  
 				<ul id="line">
-					<li>
+					<li>  
 						<div class="focus"></div>
 						<div>敬请期待
 						</div>
-						<div>2024.1</div>
+						<div>2024.1</div>  
 					</li>
 					<li>
 						<div class="focus"></div>
@@ -79,9 +79,9 @@
 					</li>
 					<li>  
 						<div class="focus"></div>
-						<div>....
+						<div>...
 						</div>
-						<div>....</div>
+						<div>...</div>
 					</li>
 					<li>
 						<div class="focus"></div>
@@ -98,7 +98,7 @@
 						src="./static/img/logokuang.png">  
 				</div>
 				<div class="welcome">
-				         I' m <span class="gradientText">
+				        I' m <span class="gradientText">  
 						Future </span>
 				</div>
 				<div class="description">wok! <span class="purpleText">Full Stack</span> Developer
@@ -162,7 +162,7 @@
 							<img src="./static/img/i1.png" alt="">
 						</div>
 
-					</a><a class="projectItem a" target="_blank" href="https://pan.quark.com">
+					</a><a class="projectItem a" target="_blank" href="https://pan.quark.cn">
 						<div class="projectItemLeft">
 							<h1>Quark盘</h1>
 							<p>存储收集文件</p>
@@ -248,7 +248,7 @@
 		</div>
 	</div>
 	<footer>
-		Shouar©2020|
+		Future©2020|
 		<a href="https://beian.miit.gov.cn/">
 			苏ICP备20240706号-1(假的) </a>
 	</footer>
