--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 	<div id="zyyo-loading">
-		<div id="zyyo-loading-center">      
+		<div id="zyyo-loading-center">        
 		</div>
 	</div>
 	<div class="zyyo-filter"></div>
@@ -49,6 +49,8 @@
 				</div>  
 				<div class="left-tag-item">前端
 				</div>
+				<div class="left–tag–item">回忆
+				</div>
 				<div class="left-tag-item">科技</div>
 			</div>
 			<div class="left-div left-time">  
@@ -69,7 +71,7 @@
 						<div class="focus"></div>
 						<div>撼
 						</div>
-						<div>2023.3</div>
+						<div>2023.3</div>  
 					</li>
 					<li>
 						<div class="focus"></div>
@@ -95,7 +97,7 @@
 			<header>
 				<div class="index-logo" style="background-image: url(./static/img/logo.png);">  
 					<img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"  
-						src="./static/img/logokuang.png">  
+						src="./static/img/logokuang.png">    
 				</div>
 				<div class="welcome">
 				        I' m <span class="gradientText">  
