--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
 				<div class="left-tag-item">linux
 				</div>
 				<div class="left-tag-item">羽球  
-				</div>  
-				<div class="left-tag-item">前端
-				</div>
-				<div class="left–tag–item">回忆
+				</div>    
+				<div class="left-tag-item">前端  
 				</div>
 				<div class="left-tag-item">科技</div>
 			</div>
@@ -60,7 +58,7 @@
 						<div>敬请期待
 						</div>
 						<div>2024.1</div>  
-					</li>
+					</li>  
 					<li>
 						<div class="focus"></div>
 						<div>ICP备案成功
@@ -81,9 +79,9 @@
 					</li>
 					<li>  
 						<div class="focus"></div>
-						<div>...
+						<div>.......
 						</div>
-						<div>...</div>
+						<div>.......</div>
 					</li>
 					<li>
 						<div class="focus"></div>
@@ -96,14 +94,14 @@
 		<div class="zyyo-right">
 			<header>
 				<div class="index-logo" style="background-image: url(./static/img/logo.png);">  
-					<img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"  
+					<img style="position: absolute;top:-15%;left:-10%;width: 120%; aspect-ratio: 1/1;"    
 						src="./static/img/logokuang.png">    
 				</div>
 				<div class="welcome">
 				        I' m <span class="gradientText">  
 						Future </span>
 				</div>
-				<div class="description">wok! <span class="purpleText">Full Stack</span> Developer
+				<div class="description">wok! <span class="purpleText">Full Stack</span> Developer  
 				</div>
 				<div class="description">📝 The only way to do <span class="purpleText textBackground">great</span> is
 					to <span class="purpleText textBackground">love</span> what you do. </div>
@@ -116,7 +114,7 @@
 						<div class="iconTip">Github</div>
 					</a><a class="iconItem" onclick="" href="mailto:2424113648@qq.com">
 						<svg t="1704870588438" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="3174" >
-                            <path d="M926.47619 355.644952V780.190476a73.142857 73.142857 0 0 1-73.142857 73.142857H170.666667a73.142857 73.142857 0 0 1-73.142857-73.142857V355.644952l304.103619 257.828572a170.666667 170.666667 0 0 0 220.745142 0L926.47619 355.644952zM853.333333 170.666667a74.044952 74.044952 0 0 1 26.087619 4.778666 72.704 72.704 0 0 1 30.622477 22.186667 73.508571 73.508571 0 0 1 10.678857 17.67619c3.169524 7.509333 5.12 15.652571 5.607619 24.210286L926.47619 243.809524v24.380952L559.469714 581.241905a73.142857 73.142857 0 0 1-91.306666 2.901333l-3.632762-2.925714L97.52381 268.190476v-24.380952a72.899048 72.899048 0 0 1 40.155428-65.292191A72.97219 72.97219 0 0 1 170.666667 170.666667h682.666666z"  p-id="3175"></path>  
+                            <path d="M926.47619 355.644952V780.190476a73.142857 73.142857 0 0 1-73.142857 73.142857H170.666667a73.142857 73.142857 0 0 1-73.142857-73.142857V355.644952l304.103619 257.828572a170.666667 170.666667 0 0 0 220.745142 0L926.47619 355.644952zM853.333333 170.666667a74.044952 74.044952 0 0 1 26.087619 4.778666 72.704 72.704 0 0 1 30.622477 22.186667 73.508571 73.508571 0 0 1 10.678857 17.67619c3.169524 7.509333 5.12 15.652571 5.607619 24.210286L926.47619 243.809524v24.380952L559.469714 581.241905a73.142857 73.142857 0 0 1-91.306666 2.901333l-3.632762-2.925714L97.52381 268.190476v-24.380952a72.899048 72.899048 0 0 1 40.155428-65.292191A72.97219 72.97219 0 0 1 170.666667 170.666667h682.666666z"  p-id="3175"></path>    
                         </svg>
 						<div class="iconTip">Mail</div>    
 					</a><a class="iconItem" onclick="pop('./static/img/wxzsm.jpg')" href="javascript:void(0)">    
